cambio la direccion del resto de las imagenes

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
             <section class="seccion2">
                 <h2>Autor: Alejandra Diaz</h2>
-                <img src="/assets/imgs/alejandra.jpg" alt="foto de la escritora">
+                <img src="./assets/imgs/alejandra.jpg" alt="foto de la escritora">
                 <h4>Instagram: <a href="https://www.instagram.com/alejandradiazescritora/" class="contacto"><i class="fa-brands fa-instagram"></i></a></h4>
             </section>
 
         </div>
 
         <div class="libro2">
-            <img src="/assets/imgs/libro2.jpg" alt="Libro una familia no tan feliz">
+            <img src="./assets/imgs/libro2.jpg" alt="Libro una familia no tan feliz">
 
             <section class="seccion1l2">
                 <h1>Una familia no tan feliz</h1>
@@ -69,7 +69,7 @@
 
             <section class="seccion2l2">
                 <h2>Autor: Shari Lapena</h2>
-                <img src="/assets/imgs/shari.jpg" alt="foto de la escritora">
+                <img src="./assets/imgs/shari.jpg" alt="foto de la escritora">
                 <h4>Instagram: <a href="https://www.instagram.com/sharilapena/" class="contacto"><i class="fa-brands fa-instagram"></i></a></h4>
             </section>
 
@@ -77,7 +77,7 @@
 
          </div>
         <div class="libro1">
-            <img src="/assets/imgs/libro3.jpg" alt="Libro la Chica del Tren">
+            <img src="./assets/imgs/libro3.jpg" alt="Libro la Chica del Tren">
 
             <section class="seccion1">
                 <h1>La chica del tren</h1>
@@ -89,7 +89,7 @@
 
             <section class="seccion2">
                 <h2>Autor: Paula Hawkins</h2>
-                <img src="/assets/imgs/paula.jpg" alt="foto de la escritora">
+                <img src="./assets/imgs/paula.jpg" alt="foto de la escritora">
                  <h4>Instagram: <a href="https://www.instagram.com/paulahawkins2010/" class="contacto"><i class="fa-brands fa-instagram"></i></a></h4>
             </section>
 
